Add linked issues from jira, linear, github and slack.
